# unisearch

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
tests/: conftest.py  test_app.py  test_indexing.py  test_parse.py  test_utils.py  tests.py
us_src/unisearch/: app.py  config.py  indexing.py  model.py  parse.py  upload.py  utils.py
