[metadata]
name = unisearch
description = parse & search a chosen site
author = daniil ignatiev
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, win64
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = unisearch
python_requires = >=3.6
package_dir = =us_src
zip_safe = no

[options.require_extras]
testing = 
    flake8>=3.9.2
    tox>=3.24.3
    pytest>=6.2.5
    pytest-cov>=2.12.1
    mypy>=0.910

[options.package_data]
unisearch = py.typed