[metadata]
name = unisearch
description = parse & search a chosen site
author = daniil ignatiev
license = MIT
license_file = LICENSE
platforms = unix, linux, osx
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = unisearch
python_requires = >=3.7.1
package_dir = =us_src
zip_safe = no